Fix check box, check box error style and bg of scrollbar track in social auth

--- a/src/app/features/auth/auth-container/auth-container.component.css
+++ b/src/app/features/auth/auth-container/auth-container.component.css
@@ -352,7 +352,7 @@ ol[role="list"] {
 }
 
 .social-auth-content::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.01);
+  background-color: var(--clr-primary);
 }
 
 .social-auth-content::-webkit-scrollbar-thumb {
@@ -597,7 +597,6 @@ input:not(:focus):not(:placeholder-shown):invalid {
 
 .checkbox-label input[type="checkbox"] {
   position: absolute;
-  opacity: 0;
   width: 1.25rem;
   height: 1.25rem;
   left: 0;
@@ -653,7 +652,11 @@ input:not(:focus):not(:placeholder-shown):invalid {
 }
 
 .checkbox-error {
-  margin-top: var(--space-sm);
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  margin-top: -1px;
   margin-left: 2rem;
   padding: var(--space-sm);
   font-size: var(--fs-300);
